--- a/config/java_main.yml
+++ b/config/java_main.yml
@@ -15,5 +15,5 @@
 
 # Configuration for the Java Main container
 ---
-java_main_class:
+java_main_class: org.springframework.boot.loader.JarLauncher
 arguments:
